fixed z-index

--- a/Extension/src/pages/common/styles/vars.pcss
+++ b/Extension/src/pages/common/styles/vars.pcss
@@ -44,9 +44,9 @@
     --overlay-gray: rgba(137, 137, 137, 0.5);
     --light-shadow: rgba(0, 0, 0, 0.05);
     --sidebar-transition: 0.3s ease;
-    /* z-index: 1 reserved by Ace Editor */
-    --z-idx-options-sidebar: 2;
-    --z-idx-options-skip-to-content: 3;
+    /* z-index: 4 reserved by Ace Editor */
+    --z-idx-options-sidebar: 5;
+    --z-idx-options-skip-to-content: 6;
     --z-idx-options-notifications: 10;
     --z-idx-options-modals: 11;
 
